[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.dw6]
# Configuration for the DW6 workflow tool
kernel_files = [
    "src/dw6/state_manager.py",
    "src/dw6/git_handler.py",
    "src/dw6/main.py"
]

[project]
name = "dw6"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "GitPython",
    "httpx[socks]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dw6 = "dw6.main:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
